--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>guru.springframework</groupId>
     <artifactId>mb2g-release-plugin</artifactId>
-    <version>1.1</version>
+    <version>1.4-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,7 +34,7 @@
     <scm>
         <developerConnection>scm:git:https://github.com/pastatopf/mb2g-release-plugin.git</developerConnection>
         <url>https://github.com/pastatopf/mb2g-release-plugin</url>
-        <tag>mb2g-release-plugin-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
@@ -55,11 +55,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
-                <configuration>
-
-                    <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
-
-                </configuration>
             </plugin>
         </plugins>
     </build>
